updated home page content

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <h2 class="text-3xl font-semibold mb-4">👋</h2>
         <h2 class="text-3xl font-semibold mb-4">I'm Gaurav Shetty</h2>
         <p class="text-base text-gray-600">
-            Data-driven problem solver with a Master's in Data Science from Rutgers, leveraging hands-on projects, professional experience, and published research to create impactful solutions in machine learning, NLP, and statistical modeling.  
+          🔢 <b>Data is more than numbers—it’s a roadmap to the future.</b> With expertise in AI, statistics, and predictive modeling, I develop systems that analyze, optimize, and forecast, helping businesses and researchers stay ahead of the curve.  
         </p>
         
 
@@ -108,7 +108,7 @@
               <h4 class="text-sm font-medium mb-1">Rutgers University</h4>
               <p class="text-xs text-gray-600 mb-1">Master of Science in Data Science</p>
               <p class="text-xs text-gray-500">May 2025</p>
-              <p class="text-xs text-gray-600 mt-2">Focused on machine learning, statistical modeling, and data visualization. Completed projects on predictive modeling and natural language processing.</p>
+              <p class="text-xs text-gray-600 mt-2">Built expertise in machine learning, statistical modeling, and data mining, focusing on AI, big data, time series predictions, and GIS applications.</p>
             </div>
           </div>
         </section>
@@ -121,24 +121,23 @@
 
         <!-- Projects Section -->
         <section class="mt-10">
-          <h3 class="text-sm font-medium mb-4">During my free time I try to implement concepts I find interesting in the data science field. 
-            This usually includes applications of concepts like NLP, Computer vision, and statistical modeling. 
-            Here's some of the recent projects I have been working on:
+          <h3 class="text-sm font-medium mb-4">Building intelligent systems is more than just a profession—it's my passion. 
+            Whether it’s NLP, computer vision, or statistical modeling, I enjoy building intelligent systems that push the boundaries of AI. Here are some of my recent projects:
           </h3>
           <div class="space-y-6">
             <div class="project-card bg-white p-4 rounded-lg flex items-center space-x-4">
               <img src="./assets/nextbuys.jpeg" alt="NextBuys.co Project" class="w-24 h-24 object-cover rounded-md">
               <div>
                 <h4 class="text-sm font-medium mb-1">NextBuys.co - A recommendation system</h4>
-                <p class="text-xs text-gray-600 mb-3">In this project we developed a website which was able to recommend different products to the user based on similarity metrics and rule mining algorithms.</p>
+                <p class="text-xs text-gray-600 mb-3">Created a website that recommends products using a combination of similarity metrics and association rule mining.</p>
               </div>
             </div>
             <div class="project-card bg-white p-4 rounded-lg flex items-center space-x-4">
               <img src="./assets/attack.jpeg" alt="Adversarial Attacks Project" class="w-24 h-24 object-cover rounded-md">
               <div>
                 <h4 class="text-sm font-medium mb-1">A Study on Adversarial Attacks and Defenses in Deep Learning Models</h4>
-                <p class="text-xs text-gray-600 mb-3">As machine learning becomes increasingly prevalent, it is crucial to recognize that these systems are also vulnerable to security issues.
-                  This project explores inference attacks on machine learning models, highlighting both attack strategies and defense mechanisms.
+                <p class="text-xs text-gray-600 mb-3">This project examines how machine learning models can be vulnerable to adversarial attacks, 
+                  exploring both attack strategies and defense mechanisms to enhance model security.
                 </p>
               </div>
             </div>
@@ -169,8 +168,9 @@
 
         <!-- Experience Section -->
         <section class="mt-10">
-          <h3 class="text-sm font-medium mb-4">I also have experience working with data in professional settings. My work ranges from providing business insights based on in-depth analysis to 
-            designing system architectures for different business flows. Here's an overview of my experiences:
+          <h3 class="text-sm font-medium mb-4">In the world of data, I’ve been the architect, the analyst, and the problem solver. 
+            I’ve tackled everything from predictive models to system designs, all with the goal of making things run better. 
+            Here's a look at what I've built so far:
           </h3>
           <div class="space-y-6">
             <div class="project-card bg-white p-4 rounded-lg">
@@ -194,7 +194,11 @@
                   <p class="text-xs text-gray-500">Nov 2020 - Jul 2023</p>
                 </div>
               </div>
-              <p class="text-xs text-gray-600 mt-3">I was part of the Design and Architecture team at the company, where I played a pivotal role in developing system designs and architectures based on business requirements. Some of the systems I designed include an online SIM ordering and delivery system, an improved JioPhone sales system, the integration of new telecom regions into the existing architecture, and more. I also oversaw the delivery of these designs, which involved regular meetings with various development teams and resolving any issues that arose until deployment in production. In addition to system design, I developed Python tools for the team to streamline various tasks and reduce issue analysis time.</p>
+              <p class="text-xs text-gray-600 mt-3">As a key member of the Design and Architecture team, I played an integral role in developing 
+                and delivering scalable telecom solutions. 
+                From creating systems for online SIM ordering to integrating new telecom regions, 
+                I ensured designs met business needs and were smoothly implemented. 
+                I also streamlined team workflows with custom Python tools to improve efficiency and reduce problem-solving time.</p>
             </div>
           </div>
         </section>
@@ -216,7 +220,7 @@
                   <h4 class="text-sm font-medium mb-1">Sentiment Analysis and Classification on Twitter Spam Account Dataset</h4>
                   <p class="text-xs text-gray-600 mb-1">Published in: IEEE Xplore</p>
                   <p class="text-xs text-gray-500 mb-2">Jul 2020</p>
-                  <p class="text-xs text-gray-600">Applied VADER for sentiment analysis on Tweets and Random Forest to classify spam accounts with an accuracy of 94%</p>
+                  <p class="text-xs text-gray-600">Developed a sentiment analysis model using VADER and a Random Forest classifier to accurately identify Twitter spam accounts, achieving 94% accuracy.</p>
                 </div>
               </div>
             </a>
@@ -228,7 +232,7 @@
                   <h4 class="text-sm font-medium mb-1">Type-II Diabetes detection using Decision-tree based Ensemble of Classifiers</h4>
                   <p class="text-xs text-gray-600 mb-1">Published in: IEEE Xplore</p>
                   <p class="text-xs text-gray-500 mb-2">Sept 2019</p>
-                  <p class="text-xs text-gray-600">Compared ensemble classifiers for diabetes detection, XGBoost outperformed others with a maximum accuracy of 93.5%</p>
+                  <p class="text-xs text-gray-600">Investigated the use of Decision Tree-based Ensemble classifiers for Type-II diabetes detection, achieving a maximum accuracy of 93.5% with XGBoost.</p>
                 </div>
               </div>
             </a>
