--- a/index.html
+++ b/index.html
@@ -121,26 +121,36 @@
 
         <!-- Projects Section -->
         <section class="mt-10">
-          <h3 class="text-sm font-medium mb-4">Building intelligent systems is more than just a profession—it's my passion. 
-            Whether it’s NLP, computer vision, or statistical modeling, I enjoy building intelligent systems that push the boundaries of AI. Here are some of my recent projects:
+          <h3 class="text-sm font-medium mb-4">
+            Building intelligent systems is more than just a profession—it's my passion.
+            Whether it’s NLP, computer vision, or statistical modeling, I enjoy building
+            intelligent systems that push the boundaries of AI. Here are some of my recent projects:
           </h3>
           <div class="space-y-6">
-            <div class="project-card bg-white p-4 rounded-lg flex items-center space-x-4">
-              <img src="./assets/nextbuys.jpeg" alt="NextBuys.co Project" class="w-24 h-24 object-cover rounded-md">
-              <div>
-                <h4 class="text-sm font-medium mb-1">NextBuys.co - A recommendation system</h4>
-                <p class="text-xs text-gray-600 mb-3">Created a website that recommends products using a combination of similarity metrics and association rule mining.</p>
+            <a href="nextbuys_details.html" class="block">
+              <div class="project-card bg-white p-4 rounded-lg flex items-center space-x-4 hover:shadow-md transition-shadow">
+                <img src="./assets/nextbuys.jpeg" alt="NextBuys.co Project" class="w-24 h-24 object-cover rounded-md">
+                <div>
+                  <h4 class="text-sm font-medium mb-1">NextBuys.co - A recommendation system</h4>
+                  <p class="text-xs text-gray-600 mb-3">
+                    Created a website that recommends products using a combination of similarity metrics and association rule mining.
+                  </p>
+                </div>
               </div>
-            </div>
-            <div class="project-card bg-white p-4 rounded-lg flex items-center space-x-4">
-              <img src="./assets/attack.jpeg" alt="Adversarial Attacks Project" class="w-24 h-24 object-cover rounded-md">
-              <div>
-                <h4 class="text-sm font-medium mb-1">A Study on Adversarial Attacks and Defenses in Deep Learning Models</h4>
-                <p class="text-xs text-gray-600 mb-3">This project examines how machine learning models can be vulnerable to adversarial attacks, 
-                  exploring both attack strategies and defense mechanisms to enhance model security.
-                </p>
+            </a>
+        
+            <a href="inferenceattack_details.html" class="block">
+              <div class="project-card bg-white p-4 rounded-lg flex items-center space-x-4 hover:shadow-md transition-shadow">
+                <img src="./assets/attack.jpeg" alt="Adversarial Attacks Project" class="w-24 h-24 object-cover rounded-md">
+                <div>
+                  <h4 class="text-sm font-medium mb-1">A Study on Adversarial Attacks and Defenses in Deep Learning Models</h4>
+                  <p class="text-xs text-gray-600 mb-3">
+                    This project examines how machine learning models can be vulnerable to adversarial attacks,
+                    exploring both attack strategies and defense mechanisms to enhance model security.
+                  </p>
+                </div>
               </div>
-            </div>
+            </a>
           </div>
         </section>
 
@@ -173,6 +183,7 @@
             Here's a look at what I've built so far:
           </h3>
           <div class="space-y-6">
+            <a href="experience.html#pgw" class="block">
             <div class="project-card bg-white p-4 rounded-lg">
               <div class="flex items-start space-x-4">
                 <img src="./assets/pgw.jpeg" alt="Company Logo" class="w-16 h-16 object-cover rounded-md">
@@ -184,7 +195,9 @@
               </div>
               <p class="text-xs text-gray-600 mt-3">As the sole Data Science intern of the customer programs department, my roles primarily involved developing predictive models and conducting statistical analyses on PGW’s customer data. My responsibilities spanned forecasting energy burdens, monthly customer counts, evaluating the impact of campaigns, and informing data-driven communication strategies. I delivered numerous projects, each involving collaboration with cross-functional teams, understanding their requirements, gathering useful data, and providing actionable insights and recommendations to stakeholders.</p>
             </div>
+            </a>
 
+            <a href="experience.html#pgw" class="block">
             <div class="project-card bg-white p-4 rounded-lg">
               <div class="flex items-start space-x-4">
                 <img src="./assets/jio.jpeg" alt="Company Logo" class="w-16 h-16 object-cover rounded-md">
@@ -201,6 +214,7 @@
                 I also streamlined team workflows with custom Python tools to improve efficiency and reduce problem-solving time.</p>
             </div>
           </div>
+            </a>
         </section>
 
         <div class="flex items-center my-10">
