Added nav update to other pages

--- a/inferenceattack_details.html
+++ b/inferenceattack_details.html
@@ -8,7 +8,14 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@600&display=swap" rel="stylesheet">
   <script src="https://unpkg.com/lucide@latest"></script>
+  <script>
+    function toggleMenu() {
+      document.getElementById('sidebar').classList.toggle('-translate-x-full');
+    }
+  </script>
   <style>
     body {
       font-family: 'Inter', sans-serif;
@@ -31,13 +38,27 @@
     a:hover {
       text-decoration: underline;
     }
+    .nav-item {
+      display: flex;
+      align-items: center;
+      padding: 0.5rem;
+      border-radius: 0.5rem;
+      cursor: pointer;
+    }
+    .nav-item i {
+      font-size: 1.25rem;
+    }
+    .content-container {
+      max-width: 800px;
+      margin: auto;
+    }
   </style>
 </head>
 
 <body class="bg-white">
   <div class="flex h-screen">
     <!-- Sidebar -->
-    <aside class="w-64 bg-gray-100 shadow-lg p-6 flex flex-col justify-between">
+    <aside id="sidebar" class="w-64 bg-gray-100 shadow-lg p-6 flex flex-col justify-between fixed inset-y-0 left-0 transform -translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out">
       <div>
         <div class="flex items-center space-x-3 mb-10">
           <div class="w-12 h-12 bg-gray-300 rounded-full"> <img src="./assets/profilepic.jpeg" alt="PGW Logo"></div>
@@ -67,17 +88,22 @@
         </nav>
       </div>
 
-      
       <div class="space-y-2">
         <h2 class="text-sm text-gray-600">Socials</h2>
         <a href="https://linkedin.com" target="_blank" class="nav-item p-2 rounded-lg cursor-pointer">LinkedIn</a>
         <a href="https://github.com" target="_blank" class="nav-item p-2 rounded-lg cursor-pointer">Github</a>
+        <a href="https://whatsapp.com" target="_blank" class="nav-item p-2 rounded-lg cursor-pointer">WhatsApp</a>
       </div>
     </aside>
 
+    <!-- Mobile menu button -->
+    <button onclick="toggleMenu()" class="absolute top-4 left-4 z-50 md:hidden bg-gray-800 text-white p-2 rounded-lg">
+      ☰
+    </button>
+
     <!-- Main Content -->
-    <main id="main-content" class="flex-1 p-10 overflow-auto flex justify-center bg-white">
-      <div class="max-w-4xl text-left project-section">
+    <main id="main-content" class="flex-1 p-6 md:ml-64 flex justify-center items-center">
+      <div class="content-container">
         <h1 class="text-3xl font-bold mb-4">A Study on Adversarial Attacks and Defenses in Deep Learning Models</h1>
         <p class="text-gray-600 mb-6">This project explores inference attacks on machine learning models, highlighting both attack strategies and defense mechanisms. 
           As machine learning becomes increasingly prevalent, it is crucial to recognize that these systems are also vulnerable to adversarial attacks. 
