--- a/experience.html
+++ b/experience.html
@@ -175,9 +175,9 @@
 
       <div class="space-y-2">
         <h2 class="text-sm text-gray-600">Socials</h2>
-        <a href="https://linkedin.com" target="_blank" class="nav-item p-2 rounded-lg cursor-pointer">LinkedIn</a>
-        <a href="https://github.com" target="_blank" class="nav-item p-2 rounded-lg cursor-pointer">Github</a>
-        <a href="https://whatsapp.com" target="_blank" class="nav-item p-2 rounded-lg cursor-pointer">WhatsApp</a>
+        <a href="https://www.linkedin.com/in/gaurav-shetty-3762a8150/" target="_blank" class="nav-item p-2 rounded-lg cursor-pointer">LinkedIn</a>
+        <a href="https://github.com/gauravshetty98" target="_blank" class="nav-item p-2 rounded-lg cursor-pointer">Github</a>
+        <a href="https://scholar.google.com/citations?user=lbqhXNoAAAAJ&hl=en" target="_blank" class="nav-item p-2 rounded-lg cursor-pointer">Google Scholar</a>
       </div>
     </aside>
 
@@ -551,11 +551,11 @@
         </div>
 
         <footer class="bg-white text-center py-8 mt-10 mb-10">
-          <p class="text-sm text-gray-600">Crafting solutions, one experience at a time.</p>
+          <p class="text-sm text-gray-600">Bringing data to life, one project at a time.</p>
           <div class="flex justify-center space-x-4 mt-4">
-            <a href="mailto:gaurav@example.com" class="text-gray-600 hover:text-gray-800"><i data-lucide="mail"></i></a>
-            <a href="https://linkedin.com" target="_blank" class="text-gray-600 hover:text-gray-800"><i data-lucide="linkedin"></i></a>
-            <a href="https://github.com" target="_blank" class="text-gray-600 hover:text-gray-800"><i data-lucide="github"></i></a>
+            <a href="mailto:gaurav.shetty@rutgers.edu" class="text-gray-600 hover:text-gray-800"><i data-lucide="mail"></i></a>
+            <a href="https://www.linkedin.com/in/gaurav-shetty-3762a8150/" target="_blank" class="text-gray-600 hover:text-gray-800"><i data-lucide="linkedin"></i></a>
+            <a href="https://github.com/gauravshetty98" target="_blank" class="text-gray-600 hover:text-gray-800"><i data-lucide="github"></i></a>
           </div>
         </footer>
       </div>
