--- a/nextbuys_details.html
+++ b/nextbuys_details.html
@@ -104,9 +104,9 @@
 
       <div class="space-y-2">
         <h2 class="text-sm text-gray-600">Socials</h2>
-        <a href="https://linkedin.com" target="_blank" class="nav-item p-2 rounded-lg cursor-pointer">LinkedIn</a>
-        <a href="https://github.com" target="_blank" class="nav-item p-2 rounded-lg cursor-pointer">Github</a>
-        <a href="https://whatsapp.com" target="_blank" class="nav-item p-2 rounded-lg cursor-pointer">WhatsApp</a>
+        <a href="https://www.linkedin.com/in/gaurav-shetty-3762a8150/" target="_blank" class="nav-item p-2 rounded-lg cursor-pointer">LinkedIn</a>
+        <a href="https://github.com/gauravshetty98" target="_blank" class="nav-item p-2 rounded-lg cursor-pointer">Github</a>
+        <a href="https://scholar.google.com/citations?user=lbqhXNoAAAAJ&hl=en" target="_blank" class="nav-item p-2 rounded-lg cursor-pointer">Google Scholar</a>
       </div>
     </aside>
 
@@ -157,6 +157,16 @@
           <a href="https://github.com/gauravshetty/nextbuys" target="_blank" class="px-4 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600">View on GitHub</a>
           <a href="https://nextbuys.co" target="_blank" class="px-4 py-2 bg-green-500 text-white rounded-lg hover:bg-green-600">Visit Website</a>
         </div>
+
+        <footer class="bg-white text-center py-8 mt-10 mb-10">
+          <p class="text-sm text-gray-600">Bringing data to life, one project at a time.</p>
+          <div class="flex justify-center space-x-4 mt-4">
+            <a href="mailto:gaurav.shetty@rutgers.edu" class="text-gray-600 hover:text-gray-800"><i data-lucide="mail"></i></a>
+            <a href="https://www.linkedin.com/in/gaurav-shetty-3762a8150/" target="_blank" class="text-gray-600 hover:text-gray-800"><i data-lucide="linkedin"></i></a>
+            <a href="https://github.com/gauravshetty98" target="_blank" class="text-gray-600 hover:text-gray-800"><i data-lucide="github"></i></a>
+          </div>
+        </footer>
+
       </div>
     </main>
   </div>
