updaitng contact page

--- a/projects.html
+++ b/projects.html
@@ -172,7 +172,7 @@
           </div>
 
           <div class="project-card bg-white p-4 rounded-lg shadow hover:shadow-lg" data-category="nlp">
-            <img src="./assets/nlp_project.jpeg" alt="NLP Project" class="w-full h-40 object-cover rounded-md mb-4">
+            <img src="./assets/regression.jpeg" alt="NLP Project" class="w-full h-40 object-cover rounded-md mb-4">
             <h4 class="text-lg font-medium mb-2">Assessing Heart Failure Risk: Statistical Modeling with Logistic Regression</h4>
             <p class="text-sm text-gray-600 mb-4">Analyst survival chance of heart failure patients using statistical-modeling and interpreted model results</p>
             <div class="keywords">
@@ -184,7 +184,7 @@
           </div>
 
           <div class="project-card bg-white p-4 rounded-lg shadow hover:shadow-lg" data-category="nlp">
-            <img src="./assets/nlp_project.jpeg" alt="NLP Project" class="w-full h-40 object-cover rounded-md mb-4">
+            <img src="./assets/lstm_nlp.jpeg" alt="NLP Project" class="w-full h-40 object-cover rounded-md mb-4">
             <h4 class="text-lg font-medium mb-2">Deep Learning for Sentiment Analysis: IMDb Movie Reviews with LSTMs</h4>
             <p class="text-sm text-gray-600 mb-4">Implemented a Bi-directional LSTM to perform sentiment analysis on movie reviews</p>
             <div class="keywords">
