--- a/inferenceattack_details.html
+++ b/inferenceattack_details.html
@@ -121,10 +121,10 @@
         <h1 class="text-3xl font-bold mb-4">A Study on Adversarial Attacks and Defenses in Deep Learning Models</h1>
         <p class="text-gray-600 mb-6">This project explores inference attacks on machine learning models, highlighting both attack strategies and defense mechanisms. 
           As machine learning becomes increasingly prevalent, it is crucial to recognize that these systems are also vulnerable to adversarial attacks. 
-          Using a PyTorch-based computer vision model for vehicle damage assessment, we demonstrate how an attacker can exploit weaknesses using the Fast Gradient Sign Method (FGSM) to significantly degrade model accuracy. 
-          Additionally, we showcase defensive techniques such as Gaussian Noise Augmentation and adversarial training to mitigate these attacks and restore model performance. This project underscores the importance of robust AI security in real-world applications.</p>
+          Using a <strong>PyTorch</strong>-based computer vision model for vehicle damage assessment, we demonstrate how an attacker can exploit weaknesses using the <strong>Fast Gradient Sign Method (FGSM)</strong> to significantly degrade model accuracy. 
+          Additionally, we showcase defensive techniques such as <strong>Gaussian Noise Augmentation</strong> and <strong>adversarial training</strong> to mitigate these attacks and restore model performance. This project underscores the importance of robust AI security in real-world applications.</p>
 
-        <img src="./assets/nextbuys_overview.jpeg" alt="NextBuys Overview" class="w-full h-auto">
+        <img src="./assets/attack_overview.jpeg" alt="NextBuys Overview" class="w-full h-auto">
 
         <h2 class="text-2xl font-semibold mt-8 mb-2">Objective</h2>
         <p class="text-gray-600 mb-6">This project aims to analyze the impact of adversarial attacks on deep learning models, focusing on inference attacks and defense mechanisms in computer vision applications.  
@@ -135,12 +135,12 @@
         </div>
 
         <h2 class="text-2xl font-semibold mt-8 mb-2">Methodology</h2>
-        <p class="text-gray-600 mb-4">The project follows a structured approach, beginning with the development and training of a computer vision model for vehicle damage assessment using PyTorch. 
+        <p class="text-gray-600 mb-4">The project follows a structured approach, beginning with the development and training of a computer vision model for vehicle damage assessment using <strong>PyTorch</strong>. 
           After establishing a baseline accuracy of 77%, we implement FGSM attacks to craft adversarial samples and assess their impact on model performance. 
           The model performance dropped to 16% based on these attacks. 
           We also look into defensive techniques such as Gaussian Noise Augmentation, introducing controlled noise during training, and implement adversarial training, which retrains the model with adversarial examples to improve its resistance. </p>
 
-        <img src="./assets/nextbuys_methodology.jpeg" alt="Methodology Diagram" class="w-full h-auto">
+        <img src="./assets/attack_methodology.jpeg" alt="Methodology Diagram" class="w-full h-auto">
 
         <p class="text-gray-600 mb-6">The effectiveness of these defenses is measured by evaluating key performance metrics, including accuracy degradation, robustness improvements, and adversarial resistance. 
           Visualization techniques such as confusion matrices and perturbation heatmaps further illustrate the attack and defense dynamics.</p>
@@ -156,11 +156,11 @@
         <p class="text-gray-600 mb-6">This study demonstrates how even machine learning models are exposed to security risks like these attacks which can degrade the model performance. 
           It also shows ways to defend against these attack emphasizing the necessity of adversarial defense mechanisms in securing AI applications</p>
 
-        <img src="./assets/nextbuys_result.jpeg" alt="Project Outcome" class="w-full h-auto">
+        <img src="./assets/adattack_outcome.jpeg" alt="Project Outcome" class="w-full h-auto">
 
         <div class="flex space-x-4 mt-8">
-          <a href="https://github.com/gauravshetty/nextbuys" target="_blank" class="px-4 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600">View on GitHub</a>
-          <a href="https://nextbuys.co" target="_blank" class="px-4 py-2 bg-green-500 text-white rounded-lg hover:bg-green-600">Visit Website</a>
+          <a href="https://github.com/gauravshetty98/Inference-Attack-On-Insurance-Claim-Model/blob/main/RobustML.ipynb" target="_blank" class="px-4 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600">View on GitHub</a>
+          <!-- <a href="https://nextbuys.co" target="_blank" class="px-4 py-2 bg-green-500 text-white rounded-lg hover:bg-green-600">Visit Website</a> -->
         </div>
 
         <footer class="bg-white text-center py-8 mt-10 mb-10">
