--- a/lstmnlp_details.html
+++ b/lstmnlp_details.html
@@ -119,12 +119,12 @@
     <main id="main-content" class="flex-1 p-6 md:ml-64 flex justify-center items-center">
       <div class="content-container">
         <h1 class="text-3xl font-bold mb-4">Deep Learning for Sentiment Analysis: IMDb Movie Reviews with LSTMs</h1>
-        <p class="text-gray-600 mb-6">This project explores sentiment analysis on a movie reviews dataset using bi-directional Long Short-Term Memory (LSTM) networks, showcasing the application of deep learning in Natural Language Processing (NLP). 
-          The model is designed to analyze the sentiment of movie reviews, leveraging one-hot encoding for vectorization to capture contextual dependencies in text data. 
-          A sequential neural network with multiple LSTM layers and a dense output layer using a sigmoid activation function was implemented for classification. 
+        <p class="text-gray-600 mb-6">This project explores <strong>sentiment analysis</strong> on a movie reviews dataset using <strong>bi-directional Long Short-Term Memory (LSTM)</strong> networks, showcasing the application of deep learning in Natural Language Processing (NLP). 
+          The model is designed to analyze the sentiment of movie reviews, leveraging <strong>one-hot encoding</strong> for vectorization to capture contextual dependencies in text data. 
+          A sequential neural network with multiple LSTM layers and a dense output layer using a <strong>sigmoid activation function</strong> was implemented for classification. 
           The project examines the network architecture and its performance, highlighting the effectiveness of recurrent neural networks (RNNs) in sentiment analysis.</p>
 
-        <img src="./assets/nextbuys_overview.jpeg" alt="NextBuys Overview" class="w-full h-auto">
+        <img src="./assets/lstm_overview.jpeg" alt="NextBuys Overview" class="w-full h-auto">
 
         <h2 class="text-2xl font-semibold mt-8 mb-2">Objective</h2>
         <p class="text-gray-600 mb-6">The aim of this project was to explore the applications of deep learning algorithms like Long Short-Term Memory networks in the field of Natural Language Procesing. 
@@ -140,7 +140,7 @@
           The model is trained and evaluated using standard metrics such as accuracy, precision, recall, and F1-score, while techniques like dropout regularization are applied to prevent overfitting.
         </p>
 
-        <img src="./assets/nextbuys_methodology.jpeg" alt="Methodology Diagram" class="w-full h-auto">
+        <img src="./assets/lstm_block.jpeg" alt="Methodology Diagram" class="w-full h-auto">
 
         <p class="text-gray-600 mb-6">The model performed comparatively better than lexicon or rule based approaches like VADER</p>
 
@@ -156,7 +156,7 @@
           The findings suggest that LSTMs are well-suited for sentiment analysis, paving the way for further improvements using attention mechanisms or transformer-based models.
         </p>
 
-        <img src="./assets/nextbuys_result.jpeg" alt="Project Outcome" class="w-full h-auto">
+        <!-- <img src="./assets/nextbuys_result.jpeg" alt="Project Outcome" class="w-full h-auto"> -->
 
         <div class="flex space-x-4 mt-8">
           <a href="https://github.com/gauravshetty/nextbuys" target="_blank" class="px-4 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600">View on GitHub</a>
