--- a/nextbuys_details.html
+++ b/nextbuys_details.html
@@ -118,11 +118,11 @@
     <!-- Main Content -->
     <main id="main-content" class="flex-1 p-6 md:ml-64 flex justify-center items-center">
       <div class="content-container">
-        <h1 class="text-3xl font-bold mb-4">NextBuys.co - A Recommendation Engine</h1>
+        <h1 class="text-3xl font-bold mb-4"> 🛒 NextBuys.co - A Recommendation Engine</h1>
         <p class="text-gray-600 mb-6">NextBuys.co is a recommendation engine system that enhances product recommendations using Amazon transaction data. 
-            Leveraging a dataset of over 1.8 million transactions across 1,800 product categories, the system preprocesses data to identify multi-item purchases and applies cosine similarity to refine product categorization. 
-            Algorithms like FP-Growth and metrics like cosine similarity have been used to optimize these recommendations. 
-            A customer feedback loop to change recommendations based on user input.</p>
+            Leveraging a dataset of over <strong>1.8 million transactions across 1,800 product categories,</strong> the system preprocesses data to identify multi-item purchases and applies cosine similarity to refine product categorization. 
+            Algorithms like <strong>FP-Growth</strong> and metrics like <strong>cosine similarity</strong> have been used to optimize these recommendations. 
+            A <strong>customer feedback loop</strong> to change recommendations based on user input.</p>
 
         <img src="./assets/nextbuys_overview.jpeg" alt="NextBuys Overview" class="w-full h-auto">
 
@@ -137,7 +137,7 @@
         <p class="text-gray-600 mb-4">Utilized <strong>FP-Growth algorithm</strong> to identify items that are frequently bought together and used metrics such as lift and confidence to refine these suggestions. 
             Implemented <strong>cosine similarity</strong> to identify items that are similar to each other. Also designed a customer feedback loop to let the users like or dislike the recommendations based on which they are altered.</p>
 
-        <img src="./assets/nextbuys_methodology.jpeg" alt="Methodology Diagram" class="w-full h-auto">
+        <img src="./assets/nextbys_block.png" alt="Methodology Diagram" class="w-full h-auto">
 
         <p class="text-gray-600 mb-6">A feedback loop was implemented to adjust recommendations based on user preferences, refining suggestions dynamically.</p>
 
@@ -151,10 +151,10 @@
         <h2 class="text-2xl font-semibold mt-8 mb-2">Outcome</h2>
         <p class="text-gray-600 mb-6">Successfully developed an end-to-end recommendation system, blending machine learning with web development to provide an intuitive user experience.</p>
 
-        <img src="./assets/nextbuys_result.jpeg" alt="Project Outcome" class="w-full h-auto">
+        <img src="./assets/nextbuys_outcome.jpeg" alt="Project Outcome" class="w-full h-auto">
 
         <div class="flex space-x-4 mt-8">
-          <a href="https://github.com/gauravshetty/nextbuys" target="_blank" class="px-4 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600">View on GitHub</a>
+          <a href="https://github.com/gauravshetty98/NextBuys" target="_blank" class="px-4 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600">View on GitHub</a>
           <a href="https://nextbuys.co" target="_blank" class="px-4 py-2 bg-green-500 text-white rounded-lg hover:bg-green-600">Visit Website</a>
         </div>
 
