--- a/regerssionmodel_details.html
+++ b/regerssionmodel_details.html
@@ -124,7 +124,7 @@
           Model validity was assessed through residual analysis, while odds ratios provided insights into the impact of various health factors on survival outcomes. 
           This study highlights the role of data-driven decision-making in healthcare analytics.</p>
 
-        <img src="./assets/nextbuys_overview.jpeg" alt="NextBuys Overview" class="w-full h-auto">
+        <img src="./assets/regression_overview.jpeg" alt="NextBuys Overview" class="w-full h-auto">
 
         <h2 class="text-2xl font-semibold mt-8 mb-2">Objective</h2>
         <p class="text-gray-600 mb-6">This project aims to assess heart failure risk by leveraging logistic regression to predict patient survival based on key health indicators. 
@@ -140,7 +140,7 @@
           Model accuracy and reliability are assessed through residual analysis and validation metrics such as chi square tests and confusion matrices. 
         </p>
 
-        <img src="./assets/nextbuys_methodology.jpeg" alt="Methodology Diagram" class="w-full h-auto">
+        <img src="./assets/regression_block.png" alt="Methodology Diagram" class="w-full h-auto">
 
         <p class="text-gray-600 mb-6">Additionally, odds ratios are computed to quantify the impact of individual health factors on survival probability, providing a clear interpretation of the model’s predictions.</p>
 
@@ -154,12 +154,13 @@
 
         <h2 class="text-2xl font-semibold mt-8 mb-2">Outcome</h2>
         <p class="text-gray-600 mb-6">The project shows in the emerging world of complex neural networks, how a statistical model can provide accurate results while maintaining the simplicity and being interpretable. 
-          It also showed key risk factors such as age, ejection fraction, and creatinine levels significantly influence survival probability, as evidenced by their odds ratios. </p>
+          It also showed key risk factors such as age, ejection fraction, and creatinine levels significantly influence survival probability, as evidenced by their odds ratios. This was the final model that was created using stepwise-selection method using the 
+        AIC criteria:</p>
 
-        <img src="./assets/nextbuys_result.jpeg" alt="Project Outcome" class="w-full h-auto">
+        <img src="./assets/regression_outcome.png" alt="Project Outcome" class="w-1/2 h-auto mx-auto">
 
         <div class="flex space-x-4 mt-8">
-          <a href="https://github.com/gauravshetty/nextbuys" target="_blank" class="px-4 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600">View on GitHub</a>
+          <a href="https://github.com/gauravshetty98/Predicting-Heart-Failure-Survival-Using-Logistic-Regression" target="_blank" class="px-4 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600">View on GitHub</a>
           <a href="https://nextbuys.co" target="_blank" class="px-4 py-2 bg-green-500 text-white rounded-lg hover:bg-green-600">Visit Website</a>
         </div>
 
@@ -168,7 +169,7 @@
           <div class="flex justify-center space-x-4 mt-4">
             <a href="mailto:gaurav.shetty@rutgers.edu" class="text-gray-600 hover:text-gray-800"><i data-lucide="mail"></i></a>
             <a href="https://www.linkedin.com/in/gaurav-shetty-3762a8150/" target="_blank" class="text-gray-600 hover:text-gray-800"><i data-lucide="linkedin"></i></a>
-            <a href="https://github.com/gauravshetty98" target="_blank" class="text-gray-600 hover:text-gray-800"><i data-lucide="github"></i></a>
+            <a href="https://github.com/gauravshetty98/Predicting-Heart-Failure-Survival-Using-Logistic-Regression" target="_blank" class="text-gray-600 hover:text-gray-800"><i data-lucide="github"></i></a>
           </div>
         </footer>
 
