--- a/monty_details.html
+++ b/monty_details.html
@@ -95,7 +95,7 @@
             <i data-lucide="briefcase" class="text-gray-600"></i>
             <span class="text-gray-800 font-medium">Experience</span>
           </a>
-          <a href="articles.html" class="nav-item flex items-center space-x-3 p-2 rounded-lg cursor-pointer">
+          <a href="about.html" class="nav-item flex items-center space-x-3 p-2 rounded-lg cursor-pointer">
             <i data-lucide="file-text" class="text-gray-600"></i>
             <span class="text-gray-800 font-medium">Contact</span>
           </a>
@@ -120,11 +120,11 @@
       <div class="content-container">
         <h1 class="text-3xl font-bold mb-4">ML-Driven Industry Analytics: LinkedIn, BERT, and GIS in Action</h1>
         <p class="text-gray-600 mb-6">This project aimed to provide industry analytics based on a user's LinkedIn profile, offering insights into salary trends, job openings, and industry shifts pre- and post-COVID. 
-          A dashboard built with Plotly Dash integrated the LinkedIn API to fetch user data and analyzed Bureau of Labor Statistics datasets. 
-          Vectorization techniques and cosine similarity were used to identify similar industries, enhanced by Hugging Face’s BERT model for improved embeddings. GeoPandas helped in visualising geographic trends for those industries. 
+          A dashboard built with <strong>Plotly Dash</strong> integrated the <strong>LinkedIn API</strong> to fetch user data and analyzed Bureau of Labor Statistics datasets. 
+          Vectorization techniques and cosine similarity were used to identify similar industries, enhanced by <strong>Hugging Face’s BERT</strong> model for improved embeddings. <strong>GeoPandas</strong> helped in visualising geographic trends for those industries. 
           The result? A data-driven, interactive tool that delivers personalized insights into industry projections, leveraging data science techniques and public datasets to inform career decisions.</p>
 
-        <img src="./assets/nextbuys_overview.jpeg" alt="NextBuys Overview" class="w-full h-auto">
+        <img src="./assets/monty_overview.jpeg" alt="NextBuys Overview" class="w-full h-auto">
 
         <h2 class="text-2xl font-semibold mt-8 mb-2">Objective</h2>
         <p class="text-gray-600 mb-6">The project aimed to leverage machine learning and NLP techniques to deliver personalized career insights by analyzing data from the Bureau of Labor Statistics and the LinkedIn API. 
@@ -139,7 +139,8 @@
           User details fetched from Linkedin API are preprocessed before applying NLP techniques to find user’s industry data from Bureau Of Labour statistics. 
           A combination of word embeddings derived through BERT and cosine similarity metric is used to identify the user’s industry from the BLS database. </p>
 
-        <img src="./assets/nextbuys_methodology.jpeg" alt="Methodology Diagram" class="w-full h-auto">
+          <img src="./assets/monty_overview_2.jpeg" alt="NextBuys Overview" class="w-full h-auto">
+          <img src="./assets/monty_overview_3.jpeg" alt="NextBuys Overview" class="w-full h-auto">
 
         <p class="text-gray-600 mb-6">In-depth analysis is done on BLS data to showcase different kinds of trends in industry including geographic hotspots for the industry with the help of GIS libraries like GeoPandas and Folium.</p>
 
@@ -157,11 +158,10 @@
           This project lays the foundation for AI-powered career advisory tools, demonstrating the potential of data science in workforce analytics.
         </p>
 
-        <img src="./assets/nextbuys_result.jpeg" alt="Project Outcome" class="w-full h-auto">
+        <img src="./assets/monty_outcome.jpeg" alt="Project Outcome" class="w-full h-auto">
 
         <div class="flex space-x-4 mt-8">
-          <a href="https://github.com/gauravshetty/nextbuys" target="_blank" class="px-4 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600">View on GitHub</a>
-          <a href="https://nextbuys.co" target="_blank" class="px-4 py-2 bg-green-500 text-white rounded-lg hover:bg-green-600">Visit Website</a>
+          <a href="https://github.com/gauravshetty98/MONTY" target="_blank" class="px-4 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600">View on GitHub</a>
         </div>
 
         <footer class="bg-white text-center py-8 mt-10 mb-10">
