--- a/projects.html
+++ b/projects.html
@@ -109,7 +109,7 @@
             <i data-lucide="briefcase" class="text-gray-600"></i>
             <span class="text-gray-800 font-medium">Experience</span>
           </a>
-          <a href="articles.html" class="nav-item flex items-center space-x-3 p-2 rounded-lg cursor-pointer">
+          <a href="about.html" class="nav-item flex items-center space-x-3 p-2 rounded-lg cursor-pointer">
             <i data-lucide="file-text" class="text-gray-600"></i>
             <span class="text-gray-800 font-medium">Contact</span>
           </a>
@@ -196,7 +196,7 @@
           </div>
 
           <div class="project-card bg-white p-4 rounded-lg shadow hover:shadow-lg" data-category="nlp">
-            <img src="./assets/nlp_project.jpeg" alt="NLP Project" class="w-full h-40 object-cover rounded-md mb-4">
+            <img src="./assets/monty.jpeg" alt="NLP Project" class="w-full h-40 object-cover rounded-md mb-4">
             <h4 class="text-lg font-medium mb-2">ML-Driven Industry Analytics: LinkedIn, BERT, and GIS in Action</h4>
             <p class="text-sm text-gray-600 mb-4">Combined data analysis with machine learning and Linkedin API to produce customised Industry analytics</p>
             <div class="keywords">
