--- a/regerssionmodel_details.html
+++ b/regerssionmodel_details.html
@@ -95,7 +95,7 @@
             <i data-lucide="briefcase" class="text-gray-600"></i>
             <span class="text-gray-800 font-medium">Experience</span>
           </a>
-          <a href="articles.html" class="nav-item flex items-center space-x-3 p-2 rounded-lg cursor-pointer">
+          <a href="about.html" class="nav-item flex items-center space-x-3 p-2 rounded-lg cursor-pointer">
             <i data-lucide="file-text" class="text-gray-600"></i>
             <span class="text-gray-800 font-medium">Contact</span>
           </a>
