updated experience images

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             <a href="projects.html#nlp" class="category-card block p-4 bg-green-100 text-center rounded-lg shadow hover:bg-green-200">🔊 NLP</a>
             <a href="projects.html#statistical-modeling" class="category-card block p-4 bg-yellow-100 text-center rounded-lg shadow hover:bg-yellow-200">📊 Statistical Modeling</a>
             <a href="projects.html#data-analytics" class="category-card block p-4 bg-purple-100 text-center rounded-lg shadow hover:bg-purple-200">📊 Data Analytics</a>
-            <a href="projects.html#business-intelligence" class="category-card block p-4 bg-red-100 text-center rounded-lg shadow hover:bg-red-200">💼 Business Intelligence</a>
+            <!-- <a href="projects.html#business-intelligence" class="category-card block p-4 bg-red-100 text-center rounded-lg shadow hover:bg-red-200">💼 Business Intelligence</a> -->
           </div>
         </section>
         
