addded current work

--- a/index.html
+++ b/index.html
@@ -131,13 +131,39 @@
         <p class="text-base text-gray-600">
           🔢 <b>Data is more than numbers—it’s a roadmap to the future.</b> With expertise in AI, statistics, and predictive modeling, I develop systems that analyze, optimize, and forecast, helping businesses and researchers stay ahead of the curve.  
         </p>
-        
+        <div class="flex items-center my-10">
+          <div class="flex-grow border-t border-gray-300"></div>
+          <span class="mx-4 text-sm text-gray-500 uppercase">Current Research</span>
+          <div class="flex-grow border-t border-gray-300"></div>
+      </div>
+
+        <!-- Current Research section -->
+        <section class="mt-10">
+          <h3 class="text-sm font-medium mb-4">
+            Advancing AI demands continuous exploration. 
+            Currently I am focusing on using meta-learning and genetic programming to automate key training pipeline steps for optimal model performance. 
+            Follow my journey below.
+          </h3>
+          <div class="space-y-6">
+            <a href="metalearning_details.html" class="block">
+              <div class="project-card bg-white p-4 rounded-lg flex items-center space-x-4 hover:shadow-md transition-shadow">
+                <img src="./assets/metalearn.jpeg" alt="NextBuys.co Project" class="w-24 h-24 object-cover rounded-md">
+                <div>
+                  <h4 class="text-sm font-medium mb-1">Adaptive Loss Function Generation with Meta-Learning and Genetic Programming</h4>
+                    <p class="text-xs text-gray-600 mb-3">
+                      Developing a system that dynamically creates custom loss functions using meta-learning and genetic programming to optimize model performance.
+                    </p>
+                </div>
+              </div>
+            </a>
+          </div>
+        </section>
 
         <div class="flex items-center my-10">
-            <div class="flex-grow border-t border-gray-300"></div>
-            <span class="mx-4 text-sm text-gray-500 uppercase">Education</span>
-            <div class="flex-grow border-t border-gray-300"></div>
-        </div>
+          <div class="flex-grow border-t border-gray-300"></div>
+          <span class="mx-4 text-sm text-gray-500 uppercase">Education</span>
+          <div class="flex-grow border-t border-gray-300"></div>
+      </div>
 
         <!-- Education Section -->
         <section class="mt-10">
